--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projet 3 OpenClassrooms",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:assets/css/style.css"
+    "sass": "sass --watch ./assets/sass/main.scss:assets/css/style.css"
   },
   "author": "Laurent Mocydlarz",
   "license": "ISC"
